Add user creation and language selection functionality

--- a/main.tex
+++ b/main.tex
@@ -305,12 +305,33 @@ A continuación, se va a explicar como se pueden crear usuarios para las compañ
 \begin{figure}[h]
     \centering
     \includegraphics[width=6cm]{adminUsuarios.png}
-    \caption{Página de usuarios de la compañía.}
+    \caption{Página de creación de usuario de la compañía.}
     \label{fig:faqs}
 \end{figure}
 \paragraph{}
-
-
-
+Introduce la información correspondiente al usuario que se quiere crear, también se puede elegir que compañías tiene acceso cada usuario si se hace click en Compañias predeterminadas y Compañía predeterminada y escogiendo la compañía deseada. Una vez realizado pulsa en Save and Close. Si se navega hacia atrás a la página de administración de usuarios se verá que se ha creado un nuevo usuario.
+Si se quiere cambiar el idioma de la compañía, se debe ir al menú de preferencias y seleccionar el idioma deseado en la opción de Languagues.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=6cm]{languageUsuario.png}
+    \caption{Página de preferencias del usuario.}
+    \label{fig:faqs}
+\end{figure}
+\paragraph{}
+Se puede añadir idiomas si no se encuentran en la lista de idiomas disponibles. Para ello, se debe hacer click en el icono del mundo de la opción de Languagues y seleccionar el idioma deseado.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=6cm]{añadirIdioma.png}
+    \caption{Menú de añadir un idioma.}
+    \label{fig:faqs}
+\end{figure}
+\paragraph{}
+Repite este proceso tantas veces como usuarios se quiere crear.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=6cm]{usuarios.png}
+    \caption{Página de usuarios de la compañía.}
+    \label{fig:faqs}
+\end{figure}
 
 \end{document} 
