--- a/memoria/text/configuracion.tex
+++ b/memoria/text/configuracion.tex
@@ -2,6 +2,7 @@
 \subsection{Autoevaluación}
 En esta sección se han cumplido los objetivos correspondientes al 10.
 \subsection{Introducción}
+\paragraph{}
 Este módulo se enfoca en la gestión y la organización de la empresa que Odoo nos permite realizar. Se va a describir como se ha creado una nueva compañía, la distribución de usuarios entre las entidades y la organización estructural de la empresa. Además, de explora la internacionalización en Odoo, donde se prueba el soporte multilingüe y el manejo de distintas monedas .
 \subsection{Metodología}
 \paragraph{}
