--- a/memoria/text/gestFab.tex
+++ b/memoria/text/gestFab.tex
@@ -45,7 +45,7 @@ Por último, se ha automatizado la compra y transferencia de productos entre alm
 Por ultimo, se ha realizado un diagrama BPMN (figura \ref{fab}), el cual describe cómo se realiza el proceso de fabricación de un coche.
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{fotosGestFab/Fabricación.png}
+    \includegraphics[width=1\linewidth]{fotosGestFab/Fabricacion.png}
     \caption{Diagrama BMPN 2.0 del proceso de fabricación}
     \label{fab}
 \end{figure}
