Fix typos and improve wording in the configuration section of the document

--- a/memoria/text/configuracion.tex
+++ b/memoria/text/configuracion.tex
@@ -3,7 +3,7 @@
 En esta sección se han cumplido los objetivos correspondientes al 10.
 \subsection{Introducción}
 \paragraph{}
-Este módulo se enfoca en la gestión y la organización de la empresa que Odoo nos permite realizar. Se va a describir como se ha creado una nueva compañía, la distribución de usuarios entre las entidades y la organización estructural de la empresa. Además, de explora la internacionalización en Odoo, donde se prueba el soporte multilingüe y el manejo de distintas monedas .
+Este módulo se enfoca en la gestión y la organización de la empresa que Odoo nos permite realizar. Se va a describir como se ha creado una nueva compañía, la distribución de usuarios entre las entidades y la organización estructural de la empresa. Además, se explora la internacionalización en Odoo, donde se prueba el soporte multilingüe y el manejo de distintas monedas .
 \subsection{Metodología}
 \paragraph{}
 En cuanto a la creación de una nueva compañía, el proceso ha comenzado accediendo al menú de configuración dentro de las opciones generales. Luego, se ha hecho clic en el enlace \textit{Administrar compañías} para iniciar el proceso de creación de la empresa. Posteriormente, se ha completado el formulario correspondiente. Después, se ha navegado hasta el menú de \textit{Ramas de la compañía} para gestionar las sucursales de la compañía matriz recién creada, agregando dos nuevas: CochesMA.UK y CochesMA.US
@@ -12,12 +12,13 @@ Además, se ha procedido a gestionar los usuarios para las compañías creadas, 
 \paragraph{}
 Por otro lado, Odoo ofrece herramientas de internacionalización, incluyendo soporte multilingüe. Para configurarlo, se ha accedido a las opciones generales de los ajustes, donde se ha seleccionado \textit{Añadir idiomas} y se han escogido los idiomas deseados. También es posible establecer varias monedas dentro de la compañía. Para ello, se ha seleccionado la compañía matriz en la opción de \textit{Administración de compañías} dentro de las opciones generales, y en la sección de \textit{Moneda} se han activado las monedas que se desean utilizar tanto en la matriz como en las sucursales. Finalmente, se ha seleccionado la moneda que se utilizará como predeterminada.
 \subsection{Resultados y análisis}
-Se ha llevado a cabo el proceso de creación de una compañía matriz llamada CochesMA la cual tiene dos compañías rama, una en Reino Unido llamada CochesMA.UK y otra en Estados Unidos llamada CochesMA.US.
+\paragraph{}
+Se ha llevado a cabo el proceso de creación de una compañía matriz llamada CochesMA la cual tiene dos compañías rama, una en Reino Unido llamada CochesMA.UK y otra en Estados Unidos llamada CochesMA.US, visible en la figura \ref{fig:estructuraEmpresarial}.
 \begin{figure}[h]
     \centering
     \includegraphics[width=\linewidth]{fotosConfiguración/estructuraEmpresarial.png}
     \caption{Compañía matriz con sus dos compañías rama}
-    \label{fig:enter-label}
+    \label{fig:estructuraEmpresarial}
 \end{figure}
 \begin{figure}[h]
     \centering
@@ -25,6 +26,7 @@ Se ha llevado a cabo el proceso de creación de una compañía matriz llamada Co
     \caption{Ubicaciones de las compañias}
     \label{fig:enter-label}
 \end{figure}
+\paragraph{}
 Se han creado 9 usuarios. John, James, Marcus, Mark, Sheila y Tom hablan ingles y Juan, Maria y Pedro hablan español. John, James y Pedro pertenecen a la compañía matriz. Juan, Marcus y Sheila pertenecen a la rama de Estados Unidos. Maria, Mark y Tom pertenecen a la rama de Reino Unido.
 Además, se han añadido los idiomas de los usuarios a Odoo y se ha establecido la siguiente la moneda principal el Euro, pero se ha permitido el uso de la Libra esterlina para CochesMA.UK y el Dolar estadounidense para CochesMA.US. 
 \begin{figure}[h]
@@ -41,6 +43,7 @@ Además, se han añadido los idiomas de los usuarios a Odoo y se ha establecido 
     \label{fig:enter-label}
 \end{figure}
 \subsection{Conclusiones}
+\paragraph{}
 La capacidad de Odoo para gestionar múltiples compañías se demuestra en la capacidad que tiene para adaptarse a estructuras empresariales con empresas matrices y ramas.
 En cuanto al proceso de creación de usuarios en Odoo es sencillo y permite especificar detalles como la compañía a la que pertenecen, su acceso a los módulos y su idioma preferido, agilizando así el proceso de integración. La posibilidad de añadir nuevos idiomas al sistema de forma sencilla mejora la experiencia del usuario y facilita la comunicación en entornos internacionales.
 Sin embargo, es importante tener en cuenta que, aunque la creación de una nueva compañía y la gestión de sus ramas se realiza de manera intuitiva, la gestión de múltiples monedas puede resultar un poco más oculta. Para activar las monedas, es necesario pulsar en \textit{Buscar más}, y existen ciertas restricciones, como la obligación de que las empresas filiales tengan la misma moneda que la matriz.
@@ -50,7 +53,8 @@ En general, son aspectos básicos del sistema que son fáciles de configurar aun
 \subsection{Autoevaluación}
 En esta sección se han cumplido los objetivos correspondientes al 10.
 \subsection{Introducción}
-Este apartado se enfoca en mejorar la presencia digital de la empresa. Inicia con la activación del sistema multilingüe en la web, para posibilitar un alcance global. También, se aborda la personalización de la página web, integrando la información de la empresa y el logo y ajustando el tema y los colores para alinearla con la imagen de la empresa. Además, se realizan optimizaciones SEO para mejorar la visibilidad de la web en los motores de búsqueda y la implementación de SSL para garantizar la seguridad.
+\paragraph{}
+Este apartado se enfoca en mejorar la presencia digital de la empresa. Inicia con la activación del sistema multilingüe en la web, para posibilitar un alcance global. Se aborda la personalización de la página web, integrando la información de la empresa y el logo y ajustando el tema y los colores para alinearla con la imagen de la empresa. Además, se realizan optimizaciones SEO para mejorar la visibilidad de la web en los motores de búsqueda y la implementación de SSL para garantizar la seguridad.
 \subsection{Metodología}
 \paragraph{}
 Para probar el sistema multilingüe de la web hay que asegurase que los idiomas deseados están en el apartado de sitio web de la configuración y si no añadirlo desde ahí, cabe destacar que sólo dejará añadir idiomas que tengan los usuarios de la compañía. Una vez realizado este paso, el usuario podrá cambiar el idioma en la web desde la esquina superior izquierda o en el pie de página. 
@@ -65,7 +69,8 @@ Para mejorar el ranking de búsqueda con Google se han utilizado las herramienta
 Una vez que hemos realizado la web hemos configurado la web de nuestra empresa en un dominio propio con acceso seguro SSL. Esta paso es esencial a la hora de determinar si este ERP es adecuado para nuestra empresa. Ya que es una funcionalidad que se va a necesitar de cara a permitir el acceso a nuestros clientes y usuarios desde cualquier navegador de forma segura. Esta configuración se ha realizado de forma local para realizar el análisis. La máquina utilizada para realizar las pruebas es un MacBook Pro de 2018 con un procesador Intel i5. El equipo a determinado que la mejor forma de montar un servidor SSL localmente es utilizando \textit{Nginx} y Docker. Se ha planteado utilizar una máquina Ubuntu y seguir los pasos descritos en: \href{https://www.digitalocean.com/community/tutorials/how-to-create-a-self-signed-ssl-certificate-for-nginx-in-ubuntu-20-04-1}{How To Create a Self-Signed SSL Certificate for Nginx in Ubuntu 20.04}. Sin embargo, esta alternativa no era la mejor opción para nuestro objetivo y situación, ya que al tener Odoo desplegado en un contenedor Docker. Y esto nos permite modificar nuestro \textit{docker-compose.yml} añadiendo el servicio de Nginx, el cual nos proporciona el certificado SSL. 
 
 \paragraph{}
-Los pasos que hemos llevado a cabo para implementar un servidor SSL local en Odoo utilizando Docker Compose y Nginx han sido:\\
+Los pasos que hemos llevado a cabo para implementar un servidor SSL local en Odoo utilizando Docker Compose y Nginx han sido:
+\paragraph{}
 Lo primero que hemos realizado es generar un certificado SSL utilizando OpenSSL, el cual nos genera un par de claves públicas y privada, y un certificado autofirmado válido por un año. Para ello hemos abierto nuestra terminal y ejecutado el siguiente comando:
 
  \begin{lstlisting}[frame=single, basicstyle=\small]
