--- a/memoria/text/recomFin.tex
+++ b/memoria/text/recomFin.tex
@@ -1,14 +1,17 @@
 \section{Elaboración de la recomendación final}
 \subsection{Autoevaluación}
+\paragraph{}
 En esta sección se ha cumplido los objetivos correspondientes al 10
 \subsection{Introducción}
+\paragraph{}
 Tras haber analizado los distintas funcionalidades que nos ofrece Odoo durante tres meses somos capaces de emitir una recomendación clara y fundamentada sobre la viabilidad de implementar Odoo en nuestra empresa UZ-on-Marketing. Este veredicto final es producto de una evaluación objetiva y rigurosa, considerando tanto los aspectos positivos como las limitaciones.
 \subsection{Metodología}
-Tras haber analizado cada uno de las distintas funcionalidades que nos ofrece Odoo; hemos evaluado cada uno de los módulos, hemos analizado las virtudes y defectos de cada uno. De esta forma, somos capaces de proporcionar una nota numérica de forma objetiva, basada en ejes de selección y determinar si cada módulo supera un umbral. Por lo tanto, previo a realizar este análisis final hemos tenido que definir cuales son los ejes de selección. Para ello, hemos decidido utilizar un estándar reconocido en la valoración de la adquisición de software. En concreto la \href{https://iso25000.com/index.php/normas-iso-25000/iso-25010}{ISO/IEC 25010}, esta decisión se ha basado en ser su amplio alcance y reconocimiento internacional. Este estándar ofrece un enfoque integral para evaluar la calidad del software en múltiples dimensiones, incluyendo características clave como funcionalidad, usabilidad, eficiencia y seguridad. Su flexibilidad y adaptabilidad lo hacen aplicable a una variedad de tipos de software, asegurando una evaluación precisa y consistente. Además, ISO/IEC 25010 se centra en las necesidades del usuario final, facilitando la comparación entre productos y garantizando la selección del software que mejor se adapte a nuestras necesidades y requisitos específicos. Esta ISO esta compuesta por 9 características de calidad, las cuales a su vez se dividen en más factores. Para realizar el análisis de este ERP hemos hecho una selección. A cada uno de los factores hemos asignado un peso y establecido unos rangos, definiendo si descartamos el software, necesitamos una segunda opición o si lo recomendamos; siendo \textless{} MAX 1/3, entre 1/3 MAX y 2/3 MAX, y \textgreater{} MAX 2/3 respectivamente. Por úlitmo hemos realizado una tabla de agregación de resultados y una conclusión.
+\paragraph{}
+Tras haber analizado cada uno de las distintas funcionalidades que nos ofrece Odoo; hemos evaluado los módulos que nos ofrece Odoo, hemos analizado las virtudes y defectos de cada uno. Creemos que la mejor forma de realizar la evaluaciones es proporcionando una nota numérica de forma objetiva, basada en ejes de selección y determinar si cada módulo supera un umbral. Por lo tanto, previo a realizar este análisis final hemos tenido que definir cuales son los ejes de selección. Para ello, hemos decidido utilizar un estándar reconocido en la valoración de la adquisición de software. En concreto la \href{https://iso25000.com/index.php/normas-iso-25000/iso-25010}{ISO/IEC 25010}, esta decisión se ha basado en ser su amplio alcance y reconocimiento internacional. Este estándar ofrece un enfoque integral para evaluar la calidad del software en múltiples dimensiones, incluyendo características clave como funcionalidad, usabilidad, eficiencia y seguridad. Su flexibilidad y adaptabilidad lo hacen aplicable a una variedad de tipos de software, asegurando una evaluación precisa y consistente. Además, ISO/IEC 25010 se centra en las necesidades del usuario final, facilitando la comparación entre productos y garantizando la selección del software que mejor se adapte a nuestras necesidades y requisitos específicos. Esta ISO esta compuesta por 9 características de calidad, las cuales a su vez se dividen en más factores. Para realizar el análisis de este ERP hemos hecho una selección. A cada uno de los factores hemos asignado un peso y establecido unos rangos, definiendo si descartamos el software, necesitamos una segunda opición o si lo recomendamos; siendo \textless{} MAX 1/3, entre 1/3 MAX y 2/3 MAX, y \textgreater{} MAX 2/3 respectivamente. Por úlitmo hemos realizado una tabla de agregación de resultados y una conclusión.
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{final/iso.png}
+    \includegraphics[width=1\linewidth]{final/isoo.png}
     \caption{ISO/IEC 25010}
     \label{fig:enter-label}
 \end{figure}
@@ -61,19 +64,19 @@ El peso total obtenido es 60. Y en consecuencia, los rangos establecidos son:
     \item entre (60*1/3 = 20) y (60*2/3 = 40 ) =\textgreater{} Necesitamos una segunda opinión 
     \item \textgreater{} (60*2/3 = 40) =\textgreater{} Recomendamos el software
 \end{itemize}
-
+\paragraph{}
 Durante estos dos meses hemos estado analizando cada uno de los módulos más relevantes y que se adecuan a nuestras necesidades. Se ha evaluado objetivamente cada uno de los módulos y hemos llegado a las siguientes conclusiones de cada uno de los módulos.
 
 \begin{itemize}
     \item Instalación: Tanto la instalación de Odoo en máquinas locales como en máquinas remotas es sencillo. Requiere ciertos conocimientos intermedios sobre administración de sistemas, sin embargo, no han surgido problemas que hayan dificultado su instalación. Se podría reconsiderar el servidor en el que alojar la máquina remota, según los intereses de la compañía.
-    \item Configuración funcional, detalles y organización de la empresa: Módulo fácil de configurar aunque de gran importancia ya que será la base en la que se lleva a cabo el resto de funcionalidades.
-    \item Configuración funcional, imagen corporativa: La configuración y personalización de la web pensamos que es una tarea necesaria de realizar. Además, Odoo ofrece herramientas para realizar de manera sencilla y que permiten una gran flexibilidad para adecuarla a las necesidades.
+    \item Configuración funcional, detalles y organización de la empresa: Módulo fácil de configurar e intuitivo. Es importante que este módulo sea asi dado  su gran relevancia al ser la base en la que se lleva a cabo el resto de funcionalidades.
+    \item Configuración funcional, imagen corporativa: Odoo ofrece buenas herramientas para realizar de manera sencilla y con ua gran flexibilidad para adecuarla a las necesidades de cada negocio. La configuración y personalización de la web consideramos que también es una tarea esencial y que toda empresa ha de realizar.
     \item Configuración técnica, copia de seguridad: Realizar copias de seguridad de la base de datos es una tarea que se puede automatizar de forma sencilla siguiendo los pasos descritos. El lugar en el que almacenarlas se podría modificar según las necesidades y recursos de la empresa.
-    \item Configuración técnica, correo: Este módulo pensamos que es esencial implementarlo en Odoo ya que facilita la comunicación interna y externa, automatizando el envío de correos y ahorrando tiempo y coste a la compañía. Además, existe documentación para su configuració por lo que no debería ser díficil de implementar.
+    \item Configuración técnica, correo: Este módulo es fundamental para toda empresa y es necesario que su implementación en Odoo sea rápida y sencilla. Esta funcionalidad permite la comunicación interna y externa, automatizando el envío de correos y ahorrando tiempo y coste a la compañía. Además, existe una muy buena documentación para su configuració por lo que no debería ser díficil de implementar.
     \item Proyectos: Este módulo para nosotros es uno de los mejores que nos proporciona Odoo. Es sencillo de utilizar, intuitivo y muy útil. Nos permite gestionar las tareas de los distintos equipos de trabajo de una forma visual y eficiente. Además tiene un buen nivel de personalización. 
-    \item Gestión de producción (MRP): En este apartado se gestiona una funcionalidad que referencia una actividad esencial dentro de la empresa. Sin embargo, se han encontrado problemas para realizar la configuración completa de los módulos ya que la automatización de los módulos es una tarea compleja y que requiere una cantidad considerable de tiempo para su correcto funcionamiento.  
-    \item Relación con clientes (CRM): En cuanto a este módulo es una tarea compleja pero que se ha podido implementar relativamente rápido ya que aunque tenga muchas posibilidades en su configuración es intuitivo.
-    \item Gestión de personal (HR): Módulo importante en la gestión de una empresa. Se ha configurado de manera sencilla. Cabe destacar que pensamos que esta funcionalidad no es muy escalable si el número de empleados aumenta considerablemente.
+    \item Gestión de producción (MRP): En este apartado se gestiona una funcionalidad que referencia una actividad esencial dentro de la mayoria de empresas. Sin embargo, se han encontrado problemas para realizar la configuración completa de los módulos ya que la automatización de los módulos es una tarea compleja y que requiere una cantidad considerable de tiempo para conseguir su correcto funcionamiento. Por lo tanto, la valoración es negativa. 
+    \item Relación con clientes (CRM): La tarea que desempeña este módulo escompleja, pero que se ha podido implementar relativamente rápido ya que a pesar de su gran cantidad de posibilidades a la hora de realizar la configuración es intuitivo.
+    \item Gestión de personal (HR): Todo empresa en algun momento va a necesitar gestionar sus empleados, lo que hace que este módulo sea muy importante en la gestión de una empresa. Se ha configurado de forma sencilla. Cabe destacar que pensamos que esta funcionalidad no es muy escalable si el número de empleados aumenta considerablemente.
     \item Contabilidad y finanzas (FICO): Odoo 17.0 tiene un gran problema con este módulo y se tiene que recurrir a software externo para resolverlo. Su implementación no aparenta ser sencilla, dado sugerido no es oficial y no asegura que se pueda completar esta tarea con éxito. Existen otras alternativas que se podrían analizar en caso de necesidad.
     \item Business Intelligence: Este módulo permite la visualización de los diferentes ámbitos de la compañía de una manera adecuada. Sin embargo, no aporta una gran mejora en su objetivo ya que lo que hace es centralizar la información que ya se visualizaba en los demás módulos.
     \item Gestión del conocimiento: Este módulo tiene una gran importancia ya que permite 
